--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "@celsowhite/element-in-view": "^1.0.1",
     "disable-scroll": "^0.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
